--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
 							<li>Стабильное предоставление отпусков каждые 6 месяцев</li>
 						</ul>
 					</div>
-					<img src="./image/requirements/flag.png" alt="" class="requirements__conditions-img" loading="lazy">
+					<img src="./image/requirements/flag.svg" alt="" class="requirements__conditions-img" loading="lazy">
 				</div>
 			</div>
 		</section>
