last see, of course

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 				<div class="payments__content">
 					<div class="payments__content-header">
 						<!-- Category buttons for Moscow -->
-						<div class="payments__header-category" data-city-index="0">
+						<div class="payments__header-category active" data-city-index="0">
 							<button class="payments__category-button btn btn--primary" data-category-index="0">Выплаты</button>
 							<button class="payments__category-button btn btn--outlined" data-category-index="1">За ранения и
 								увечья</button>
@@ -246,7 +246,7 @@
 						
 						<!-- Category buttons for Other City -->
 						<div class="payments__header-category" data-city-index="1">
-							<button class="payments__category-button btn btn-outline-primary" data-category-index="0">Выплаты</button>
+							<button class="payments__category-button btn btn--primary" data-category-index="0">Выплаты</button>
 							<button class="payments__category-button btn btn--outlined" data-category-index="1">За ранения и
 								увечья</button>
 							<button class="payments__category-button btn btn--outlined" data-category-index="2">Семьям и
@@ -268,7 +268,7 @@
 					</div>
 
 					<!-- Category: Выплаты - Москва -->
-					<div class="payments__category-section" data-city-index="0" data-category-index="0">
+					<div class="payments__category-section active" data-city-index="0" data-category-index="0">
 						<div class="payments__category-header">
 							<h5>Выплаты</h5>
 							<img src="./image/payments/chevron-down.svg" alt="arrow" class="payments__category-arrow" loading="lazy">
@@ -479,7 +479,7 @@
 							<p>Социальная поддержка супруги при переезде к месту службы</p>
 						</li>
 						<li>
-							<p>Пособия и выплаты детм в соответствии с федеральными и региональными
+							<p>Пособия и выплаты детям в соответствии с федеральными и региональными
 								программами</p>
 						</li>
 						<li>
