--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,8 @@
 	<script src="./scripts/vacancies.js" defer></script>
 	<script src="./scripts/feedback-modal.js" defer></script>
 	<script src="./scripts/cookie-banner.js" defer></script>
+	<script src="./scripts/forms.js" defer></script>
+	<script src="./scripts/succes-modal.js" defer></script>
 </body>
 
 </html>
