add regions block

--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
 				<div class="header__contact">
 					<div class="header__contact-item">
 						<a href="#" class="header__contact-social">
-							<img src="./image/social-icons/telegram.svg" alt="telegram link" class="header__contact-icon tg-logo" loading="lazy">
+							<img src="./image/social-icons/telegram.svg" alt="telegram link" class="header__contact-icon tg-logo"
+								loading="lazy">
 						</a>
 					</div>
 					<div class="header__contact-item">
 						<a href="#" class="header__contact-social header__contact-social--wa">
-							<img src="./image/social-icons/whatsapp.svg" alt="whatsapp logo" class="header__contact-icon wa-logo" loading="lazy">
+							<img src="./image/social-icons/whatsapp.svg" alt="whatsapp logo" class="header__contact-icon wa-logo"
+								loading="lazy">
 						</a>
 					</div>
 					<div class="header__contact-item">
 						<a href="#" class="header__contact-social">
-							<img src="./image/social-icons/max.svg" alt="max logo" class="header__contact-icon max-logo" loading="lazy">
+							<img src="./image/social-icons/max.svg" alt="max logo" class="header__contact-icon max-logo"
+								loading="lazy">
 						</a>
 					</div>
 					<div class="header__contact-item">
@@ -72,7 +75,8 @@
 			<div class="header__mobile-header">
 				<img src="./image/header/black-logo.svg" alt="logo" class="header__mobile-logo" loading="lazy">
 				<button class="header__mobile-close" id="closeMenuButton">
-					<img src="./image/header/menu-burger-close.svg" alt="menu close" class="header__mobile-close-icon" loading="lazy">
+					<img src="./image/header/menu-burger-close.svg" alt="menu close" class="header__mobile-close-icon"
+						loading="lazy">
 				</button>
 			</div>
 			<nav class="header__mobile-nav">
@@ -174,7 +178,8 @@
 				<ul class="stages__steps-list">
 					<li class="stages__step">
 						<div class="stages__step-icon">
-							<img src="./image/stages/document-attachment.svg" alt="Подготовка документов" class="stages__step-img" loading="lazy">
+							<img src="./image/stages/document-attachment.svg" alt="Подготовка документов" class="stages__step-img"
+								loading="lazy">
 						</div>
 						<div class="stages__step-content">
 							<h6 class="stages__step-title">Шаг 1</h6>
@@ -183,7 +188,8 @@
 					</li>
 					<li class="stages__step">
 						<div class="stages__step-icon">
-							<img src="./image/stages/stethoscope.svg" alt="Прохождение медкомиссии" class="stages__step-img" loading="lazy">
+							<img src="./image/stages/stethoscope.svg" alt="Прохождение медкомиссии" class="stages__step-img"
+								loading="lazy">
 						</div>
 						<div class="stages__step-content">
 							<h6 class="stages__step-title">Шаг 2</h6>
@@ -192,7 +198,8 @@
 					</li>
 					<li class="stages__step">
 						<div class="stages__step-icon">
-							<img src="./image/stages/signature.svg" alt="Подписание контракта" class="stages__step-img" loading="lazy">
+							<img src="./image/stages/signature.svg" alt="Подписание контракта" class="stages__step-img"
+								loading="lazy">
 						</div>
 						<div class="stages__step-content">
 							<h6 class="stages__step-title">Шаг 3</h6>
@@ -249,7 +256,7 @@
 							<button class="payments__category-button btn btn--outlined" data-category-index="3">Доп.
 								выплаты</button>
 						</div>
-						
+
 						<!-- Category buttons for Other City -->
 						<div class="payments__header-category" data-city-index="1">
 							<button class="payments__category-button btn btn--primary" data-category-index="0">Выплаты</button>
@@ -264,7 +271,8 @@
 									<h6>Ваш регион</h6>
 									<span>Москва</span>
 								</div>
-								<img src="./image/payments/chevron-down.svg" alt="Ваш регион" class="payments__city-arrow" loading="lazy">
+								<img src="./image/payments/chevron-down.svg" alt="Ваш регион" class="payments__city-arrow"
+									loading="lazy">
 							</button>
 							<ul class="payments__city-dropdown">
 								<li class="payments__city-option" data-city-index="0">Москва</li>
@@ -501,6 +509,62 @@
 				</div>
 			</div>
 		</section>
+		<section class="regions">
+			<div class="container">
+				<div class="regions__container">
+					<div class="regions__text">
+						<div class="regions__title">
+							<h2>Мы помогаем заключить контракт в любом регионе</h2>
+							<p>Вам не нужно самостоятельно искать регион, жильё или разбираться в процедуре, мы во всём Вам поможем</p>
+						</div>
+						<div class="regions__list">
+							<ul>
+								<li>
+									<img src="./image/regions/checkmark.png" alt="checkmark">
+									<p>Оплачиваем полностью проезд до региона с самыми выгодными выплатами</p>
+								</li>
+								<li>
+									<img src="./image/regions/checkmark.png" alt="checkmark">
+									<p>Проживание до отправки в воинскую часть — за наш счёт</p>
+								</li>
+								<li>
+									<img src="./image/regions/checkmark.png" alt="checkmark">
+									<p>Оформление, консультация и помощь в подготовке документов до подписания контракта</p>
+								</li>
+								<li>
+									<img src="./image/regions/checkmark.png" alt="checkmark">
+									<p>Уже помогаем кандидатам из разных регионов РФ — от Центральной России до Дальнего Востока</p>
+								</li>
+							</ul>
+						</div>
+						<div class="regions__help">
+							<h5>Бесплатная консультация и помощь в выборе</h5>
+							<div class="regions__contact">
+								<div class="regions__contact-icons">
+									<a href="#" class="regions__contact-social">
+										<img src="./image/social-icons/telegram.svg" alt="telegram link" class="regions__contact-icon tg-logo"
+											loading="lazy">
+									</a>
+									<a href="#" class="regions__contact-social">
+										<img src="./image/social-icons/whatsapp.svg" alt="whatsapp logo" class="regions__contact-icon wa-logo"
+											loading="lazy">
+									</a>
+									<a href="#" class="regions__contact-social">
+										<img src="./image/social-icons/max.svg" alt="max logo" class="regions__contact-icon max-logo"
+											loading="lazy">
+									</a>
+								</div>
+								<div class="regions__contact-item">
+									<a href="tel:+78005553535" class="regions__contact-phone">+7 800 555-35-35</a>
+									<p class="regions__contact-hours">пн-пт <span class="regions__hours">08:00 - 19:00</span></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<img src="./image/regions/map.png" alt="country" class="regions__map">
+				</div>
+			</div>
+		</section>
 		<section class="vacancies" id="vacancies">
 			<div class="container">
 				<h2 class="vacancies__title">На какую вакансию хотели бы пойти?</h2>
@@ -514,7 +578,8 @@
 							<li data-division-id="atgm">Батарея птур</li>
 							<li data-division-id="mlrs">Реактивная артиллерийская батарея (грады)</li>
 							<li data-division-id="antiair">Зенитная артиллерийская батарея</li>
-							<li data-division-id="recon">Разведывательная рота<img src="./image/vacancies/Star.svg" alt="Рекомендуем" loading="lazy">
+							<li data-division-id="recon">Разведывательная рота<img src="./image/vacancies/Star.svg" alt="Рекомендуем"
+									loading="lazy">
 							</li>
 							<li data-division-id="repair">Ремонтная рота</li>
 							<li data-division-id="engineer">Инженерная сапёрная рота</li>
@@ -528,7 +593,8 @@
 					<div class="vacancies__content-item vacancies__content-item--list">
 						<div class="vacancies__content-header--form">
 							<button class="vacancies__back-button">
-								<img src="./image/vacancies/arrow-back.svg" alt="back button" class="vacancies__back-button--icon" loading="lazy">
+								<img src="./image/vacancies/arrow-back.svg" alt="back button" class="vacancies__back-button--icon"
+									loading="lazy">
 							</button>
 							<h5>Должность</h5>
 						</div>
@@ -682,11 +748,13 @@
 					<div class="vacancies__content-item vacancies__content-item--form">
 						<div class="vacancies__content-header--form">
 							<button class="vacancies__back-button">
-								<img src="./image/vacancies/arrow-back-dark.svg" alt="back button" class="vacancies__back-button--icon" loading="lazy">
+								<img src="./image/vacancies/arrow-back-dark.svg" alt="back button" class="vacancies__back-button--icon"
+									loading="lazy">
 							</button>
 							<h3 class="vacancies__content-title--form">Оставить заявку</h3>
 						</div>
-						<p class="vacancies__content-text--form">Мы объясняем условия до подписания, консультируем и остаёмся на связи
+						<p class="vacancies__content-text--form">Мы объясняем условия до подписания, консультируем и остаёмся на
+							связи
 						</p>
 						<div class="vacancies__user-choice">
 							<div class="vacancies__user-choice-item">
@@ -701,7 +769,8 @@
 						<form action="" class="vacancies__request">
 							<div class="request__field">
 								<label for="phone">Номер телефона</label>
-								<input type="tel" name="phone" id="phone" placeholder="+7 911 123-44-67" class="request__input" required>
+								<input type="tel" name="phone" id="phone" placeholder="+7 911 123-44-67" class="request__input"
+									required>
 							</div>
 							<div class="request__field">
 								<label for="name">ФИО</label>
@@ -831,7 +900,8 @@
 							</div>
 							<div class="training__content-description">
 								<p>Интенсивный курс по оказанию первой помощи при боевых ранениях.
-									Отрабатываются действия при кровотечениях, осколочных, пулевых и минно-взрывных травмах, а также навыки
+									Отрабатываются действия при кровотечениях, осколочных, пулевых и минно-взрывных травмах, а также
+									навыки
 									эвакуации раненых в полевых условиях.</p>
 							</div>
 						</li>
@@ -928,13 +998,16 @@
 					<div class="faq__contact">
 						<div class="faq__contact-icons">
 							<a href="#" class="faq__contact-social">
-								<img src="./image/social-icons/telegram.svg" alt="telegram link" class="faq__contact-icon tg-logo" loading="lazy">
+								<img src="./image/social-icons/telegram.svg" alt="telegram link" class="faq__contact-icon tg-logo"
+									loading="lazy">
 							</a>
 							<a href="#" class="faq__contact-social">
-								<img src="./image/social-icons/whatsapp.svg" alt="whatsapp logo" class="faq__contact-icon wa-logo" loading="lazy">
+								<img src="./image/social-icons/whatsapp.svg" alt="whatsapp logo" class="faq__contact-icon wa-logo"
+									loading="lazy">
 							</a>
 							<a href="#" class="faq__contact-social">
-								<img src="./image/social-icons/max.svg" alt="max logo" class="faq__contact-icon max-logo" loading="lazy">
+								<img src="./image/social-icons/max.svg" alt="max logo" class="faq__contact-icon max-logo"
+									loading="lazy">
 							</a>
 						</div>
 						<div class="faq__contact-item">
